--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
         <h1>
             Testing h1 header
         </h1>
+        <h2>TEsting H2 header</h2>
+        <h3>Testing h3 header</h3>
+        <div>Testuing div</div>
     </body>
 </html>
