--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body {margin: 30px;}
 </style> 
 </head>
 <body>
+    <script src="script.js"></script>
 <form>
 1st Number : <input type="text" id="firstNumber" /><br>
 2nd Number: <input type="text" id="secondNumber" /><br>
